--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 REACT_APP_SUPABASE_URL=your_supabase_url_here
 REACT_APP_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+REACT_APP_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 REACT_APP_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+
+# Database Connection (for scripts)
+DATABASE_URL=postgresql://username:password@host:port/database
