--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.4",
     "lucide-react": "^0.542.0",
     "node-fetch": "^3.3.2",
